# OpenGLTest

./: CMakeLists.txt  main.cpp  render.h
ECS/: IComponent.h  component.h  componentManager.h  entity.h
include/: glad.c
include/glad/: glad.h
lib/: glfw3.lib
shader/: axis.fs.txt  shaderfs.txt  shadervs.txt
